<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:id="@+id/tv_item_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="end"
                android:text="@string/date"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="start"
                android:text="@string/name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/tv_item_ka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="Kategori"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tv_item_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/address"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tv_item_numberPhn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/numberPhn"
                android:textSize="14sp"
                />
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:id="@+id/tv_item_longitude"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/longitude"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/tv_item_latitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/latitude"
                    android:textSize="14sp" />
            </TableRow>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>